# rust_axum_example

./: Cargo.toml  README.md
migrations/: 20241001011803_sku.sql
src/: cache.rs  error.rs  lib.rs  logging.rs  main-reload.rs  main-youtube.rs  main.rs  main_copy.rs  models.rs  nacos.rs  routes.rs  services_dependence.rs
src/dao/: mod.rs  qa_dao.rs  sku_dao.rs  test1.rs
src/handlers/: client_sku.rs  create_user.rs  divide0.rs  frontend_qa.rs  frontend_sku.rs  health_check.rs  mock_timeout.rs  mod.rs  operation_qa.rs  operation_sku.rs  sku.rs
src/model/: mod.rs
src/model/cache/: mod.rs  qa.rs
src/model/db/: mod.rs  qa.rs  sku.rs
src/model/request/: mod.rs
src/model/request/client/: find_sku.rs
src/model/request/frontend/: find_sku.rs  get_question_by_code.rs  mod.rs
src/model/request/operation/: cancel_top_question.rs  create_question.rs  create_sku.rs  delete_question.rs  find_question_list_for_trad.rs  find_sku.rs  mod.rs  price.rs  top_question.rs  update_question.rs  update_sku.rs
src/model/response/client/: find_sku.rs
src/model/response/frontend/: find_sku.rs  get_question_by_code.rs  mod.rs
src/model/response/operation/: create_question.rs  create_sku.rs  find_question_list_for_trad.rs  find_sku.rs  mod.rs  top_question.rs  update_question.rs  update_sku.rs
src/utils/: cache.rs  datetime.rs  db.rs  default_value.rs  error.rs  load_balance.rs  mod.rs  nacos.rs  request_counter.rs  request_loging.rs  request_to_internal_service.rs
tests/: about_cache.rs
