[package]
name = "rust_axum_example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version="0.7.6", features = ["multipart"]}
axum-extra = { version = "0.9.4", features = ["typed-header"]}
http-body-util = "0.1.0"
headers = "0.4.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "0.6.0", features = ["full"] }
rand = "0.8"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter", "fmt"]}
uuid = { version = "1.0", features = ["v4"] }
dotenv = "0.15"
sqlx = { version = "0.7.4", features = ["mysql", "runtime-tokio-native-tls", "macros", "chrono","bigdecimal"] }

serde_json = "1.0"
chrono = {version="0.4",features=["serde"]}
bigdecimal = {version="0.3" , features=["serde"]}
serde_with = { version = "1.10", features = ["chrono"] }

validator = { version = "0.16", features = ["derive"] }
validator_derive = "0.16"
thiserror = "1.0" # 用于错误处理
rust_decimal = "1.20"
moka = {version="0.12.8",features=["sync","future"]}  
once_cell = "1.17.1" 
serde_urlencoded = "0.7"